--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,41 +13,54 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.example.frontpi4.activities.CadastroPedidoDeVendaActivity"></activity>
+        <activity android:name=".activities.TelaPrincipalActivity"
+            android:label="Areia e Brita"
+            android:parentActivityName=".activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.frontpi4.activities.MainActivity" />
+        </activity>
+        <activity android:name=".activities.CadastroPedidoDeVendaActivity"
+            android:label="Pedido de Venda"
+            android:parentActivityName=".activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.frontpi4.activities.MainActivity" />
+        </activity>
         <activity
-            android:name="com.example.frontpi4.activities.AlteracaoUsuarioActivity"
+            android:name=".activities.AlteracaoUsuarioActivity"
             android:label="Alterar de usuário"
-            android:parentActivityName="com.example.frontpi4.activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.frontpi4.activities.ListaUsuariosActivity"
+            android:name=".activities.ListaUsuariosActivity"
             android:label="Lista de usuários"
-            android:parentActivityName="com.example.frontpi4.activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.frontpi4.activities.LoginActivity"
+            android:name=".activities.LoginActivity"
             android:label="Login"
-            android:parentActivityName="com.example.frontpi4.activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.frontpi4.activities.CadastroDeUsuarioActivity"
+            android:name=".activities.CadastroDeUsuarioActivity"
             android:label="Cadastro de usuário"
-            android:parentActivityName="com.example.frontpi4.activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.frontpi4.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
