--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".activities.ConfereEntradaActivity"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.LoginActivity"
             android:label="Login"
@@ -33,9 +33,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.MainActivity" />
-        </activity>
-
-                                <!--Activities tela principal INICIO-->
+        </activity> <!-- Activities tela principal INICIO -->
         <activity
             android:name=".activities.TelaPrincipalActivity"
             android:label="@string/texto_logo_empresa"
@@ -45,7 +43,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.LoginActivity" />
         </activity>
-
         <activity
             android:name=".activities.CadastroPedidoDeVendaActivity"
             android:label="@string/pedido_venda"
@@ -54,7 +51,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-
         <activity
             android:name=".activities.CadastroPedidoDeCompraActivity"
             android:label="@string/pedido_compra"
@@ -63,7 +59,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-
         <activity
             android:name=".activities.ConferenciaDeSaidaActivity"
             android:label="@string/conf_saida"
@@ -72,7 +67,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-
         <activity
             android:name=".activities.ConfereSaidaActivity"
             android:label="@string/conferencia_de_saida"
@@ -81,7 +75,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.ConferenciaDeSaidaActivity" />
         </activity>
-
         <activity
             android:name=".activities.ConferenciaDeEntradaActivity"
             android:label="@string/conf_entrada"
@@ -90,7 +83,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-
         <activity
             android:name=".activities.FornecedoresActivity"
             android:label="@string/fornecedores"
@@ -99,7 +91,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-
         <activity
             android:name=".activities.ClientesActivity"
             android:label="@string/clientes"
@@ -108,7 +99,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-
         <activity
             android:name=".activities.ProdutosActivity"
             android:label="@string/produtos"
@@ -116,17 +106,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
-        </activity>
-                                    <!--Activities tela principal FIM-->
-
-
+        </activity> <!-- Activities tela principal FIM -->
         <activity
             android:name=".activities.AlteracaoClienteActivity"
             android:label="@string/alterar_cliente"
             android:parentActivityName=".activities.ClientesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.frontpi4.activities.ClientesActivity"/>
+                android:value="com.example.frontpi4.activities.ClientesActivity" />
         </activity>
         <activity
             android:name=".activities.CadastroDeClienteActivity"
@@ -144,17 +131,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-
         <activity
             android:name=".activities.CadastroDeFornecedorActivity"
             android:label="@string/cadastra_fornecedor"
             android:parentActivityName=".activities.TelaPrincipalActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.frontpi4.activities.TelaPrincipalActivity"/>
-        </activity>
-
-                                    <!--OPCOES DO APPBAR INICIO-->
+                android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
+        </activity> <!-- OPCOES DO APPBAR INICIO -->
         <activity
             android:name=".activities.AlteracaoUsuarioActivity"
             android:label="@string/alterar_usuario"
@@ -203,6 +187,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.frontpi4.activities.TelaPrincipalActivity" />
         </activity>
-                                        <!--OPCOES DO APPBAR FIM-->
     </application>
+
 </manifest>
