--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,15 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/CustomActionBarTheme"
+
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.ConfereEntradaActivity"></activity>
+        <activity android:name=".activities.ConfereEntradaActivity">
+
+        </activity>
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
